k8s/NetflixFrontend/netflix-frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-frontend
  labels:
    app: netflix-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix-frontend
  template:
    metadata:
      labels:
        app: netflix-frontend
    spec:
      containers:
      - name: netflix-frontend
        image: guymeltzer/nf:13
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: netflix-frontend-service
  labels:
    app: netflix-frontend
spec:
  selector:
    app: netflix-frontend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000


---

apiVersion: v1
kind: Service
metadata:
  name: netflix-frontend-nodeport
spec:
  type: NodePort
  selector:
    app: netflix-frontend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001  # Optional field, if not specified, the control plane will allocate a port from a range (default: 30000-32767)
