k8s/NetflixFrontend/netflix-frontend-serice.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-frontend-service
  labels:
    app: netflix-frontend
spec:
  selector:
    app: netflix-frontend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
