k8s/NetflixFrontend/netflix-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-frontend

spec:
  tls:
    - hosts:
        - guy-netflix-lb-303645713.eu-north-1.elb.amazonaws.com
      secretName: guycert
  ingressClassName: nginx
  rules:
    - host:  guy-netflix-lb-303645713.eu-north-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-frontend-service
                port:
                  number:  3000
